--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 	<modules>
 		<module>espm-cloud-jpa</module>
 		<module>espm-cloud-web</module>
+		<module>espm-ui-reviews-web</module>
 	</modules>
 
 	<dependencies>
