[v1.0] Step 2: 'Select Product' UI Component of the WebShop Extension Scenario
This commit contains the sources of the 'Select Product' UI component
of the WebShop Extension Scenario. This component is part of the WebShop
Extension Application ('Customer Reviews') which is running as demo
application on SAP HANA Cloud
https://webreviewsespmhana.hana.ondemand.com/espm-ui-reviews-web/

The corresponding WebShop Extension Scenario description on SCN
http://www.sdn.sap.com/irj/scn/index?rid=/library/uuid/8016f858-369d-3010-1f9c-9402c4ecad3fis
is a step by step tutorial for any developers. 
In Chapter 2 it is described how the 'Select Product' UI component is
build up and how you run it on SAP HANA Cloud server.

Used technologies SAPUI5, OData, SAP HANA Cloud Connectivity

--- a/espm-ui-reviews-web/pom.xml
+++ b/espm-ui-reviews-web/pom.xml
@@ -146,6 +146,12 @@
 								<include>com.sap.ui5*.*</include>
 							</includes>
 						</fileset>
+						<fileset>
+							<directory>${project.basedir}/../deploy</directory>
+							<includes>
+								<include>${project.artifactId}.war</include>
+							</includes>
+						</fileset>
 					</filesets>
 				</configuration>
 			</plugin>
@@ -164,6 +170,27 @@
 							<includeGroupIds>
 								com.sap.ui5.commons,com.sap.ui5.core,com.sap.ui5.makit,com.sap.ui5.mobile,com.sap.ui5.resource,com.sap.ui5.richtexteditor,com.sap.ui5.table,com.sap.ui5.themelib_sap_goldreflection,com.sap.ui5.themelib_sap_ux,com.sap.ui5.utils,com.sap.ui5.ux3,com.sap.ui5.visualization,com.sap.ui5.viz
 							</includeGroupIds>
+						</configuration>
+					</execution>
+					<execution>
+						<id>copy-installed</id>
+						<phase>install</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+						<configuration>
+							<artifactItems>
+								<artifactItem>
+									<groupId>${project.groupId}</groupId>
+									<artifactId>${project.artifactId}</artifactId>
+									<version>${project.version}</version>
+									<type>${project.packaging}</type>
+									<destFileName>espm-ui-reviews-web.war</destFileName>
+								</artifactItem>
+							</artifactItems>
+							<outputDirectory>${project.basedir}/../deploy</outputDirectory>
+							<overWriteReleases>true</overWriteReleases>
+							<overWriteSnapshots>true</overWriteSnapshots>
 						</configuration>
 					</execution>
 					<execution>
